--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
     <title>Mirage</title>
 </head>
 <body>
+    <div class="vectors">
+        <img src="img/mainvectors/bloobsright.svg" alt="rightv" class="vectors_right">
+        <img src="img/mainvectors/Bloobs.svg" alt="leftv" class="vectors_left">
+    </div>
     <div class="promo">
         <div class="promo__vector_right">
             <img src="img/promo/vectors/Vector.svg" alt="vecr">
@@ -129,7 +133,7 @@
                     <div class="reasonswe__item-title">Design</div>
                     <div class="reasonswe__item-descr">a plan or drawing produced to show the look and function</div>
                     <div class="reasonswe__subtitle">
-                        <div>Learn more</div>
+                        <div><a href="#">Learn more</a></div>
                         <img src="icons/reasonswe/arrow.svg" alt="arrow">
                     </div>
                 </div>
@@ -151,7 +155,7 @@
                     <div class="reasonswe__item-title">Development</div>
                     <div class="reasonswe__item-descr">Development is defined as the process of growth or new</div>
                     <div class="reasonswe__subtitle">
-                        <div>Learn more</div>
+                        <div><a href="#">Learn more</a></div>
                         <img src="icons/reasonswe/arrow.svg" alt="arrow">
                     </div>
                 </div>
@@ -163,7 +167,7 @@
                     <div class="reasonswe__item-title">Branding</div>
                     <div class="reasonswe__item-descr">The marketing practice of creating a name, symbol or svg</div>
                     <div class="reasonswe__subtitle">
-                        <div>Learn more</div>
+                        <div><a href="#">Learn more</a></div>
                         <img src="icons/reasonswe/arrow.svg" alt="arrow">
                     </div>
                 </div>
@@ -198,13 +202,83 @@
                     <div class="reasonswe__item-title">Illustration</div>
                     <div class="reasonswe__item-descr">An illustration is a decoration, interpretation or visual</div>
                     <div class="reasonswe__subtitle">
-                        <div>Learn more</div>
+                        <div><a href="#">Learn more</a></div>
                         <img src="icons/reasonswe/arrow.svg" alt="arrow">
                     </div>
                 </div>
             </div>
+            <div class="reasonswe__block">
+                <img src="img/reasonswe/pluto-artist-workspace.svg" alt="artist">
+                <div class="reasonswe__block-info">
+                    <div class="main__subtitle main__subtitle_left">Design Things</div>
+                    <div class="main__title reasonswe__block-title">We Loves To Design Your Creative Ideas</div>
+                    <div class="text-block">
+                        A creative concept is an overarching “Big Idea” that captures audience interest, influences their emotional response and inspires them to take action.It is a unifying theme that can be used across all campaign messages 
+                    </div>
+                    <button class="btn promo__btn">
+                        Learn more
+                        <img class="btn__arrow" src="img/promo/vectors/arrow.svg" alt="arrow"> 
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
-
+    <div class="aboutus">
+        <div class="container">
+            <div class="teamwork">
+                <div class="teamwork__info">
+                    <div class="main__subtitle main__subtitle_left">Our Teamwork</div>
+                    <div class="main__title reasonswe__block-title">We Believe Success Lies On Teamwork</div>
+                    <div class="text-block">
+                        Good teamwork means a synergistic way of working with each person committed and working towards a shared goal. ... It is therefore a necessity that leaders facilitate and build the teamwork skills of their people if they are 
+                    </div>
+                    <button class="btn promo__btn">
+                        Learn more
+                        <img class="btn__arrow" src="img/promo/vectors/arrow.svg" alt="arrow"> 
+                    </button>
+                </div>
+                <img src="img/aboutus/house.svg" alt="house">
+            </div>
+            <div class="testimonial">
+                <img src="img/aboutus/human.svg" alt="human">
+                <div class="testimonial__info">
+                    <div class="main__subtitle main__subtitle_left">Testimonial</div>
+                    <div class="main__title reasonswe__block-title">Thats What Our 
+                        Client Says About Us</div>
+                    <div class="text-block">
+                        “ Heartiest congratulations to the team for Future projects. I extend thankful wishes and wish the team best of luck for the future assignments to come. Your effort is gladly ”
+                    </div>
+                    <div class="testimonial__signature">Jorge Morrison</div>
+                    <div class="testimonial__location">North California,USA</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="companies">
+            <img src="img/companies/ferrari.svg" alt="ferrari">
+            <img src="img/companies/microsoft-gray.svg" alt="microsoft">
+            <img src="img/companies/nat-geo.svg" alt="natgeo">
+            <img src="img/companies/Deloitte-gray.svg" alt="Deloitte">
+            <img src="img/companies/google.svg" alt="google">
+        </div>
+    </div>
+    <div class="subscribe">
+        <div class="subscribe__photo">
+            <img src="img/subscribe/mail.svg" alt="mail">
+        </div>
+        <div class="subscribe__descr">
+            <div class="subscribe__descr-title">Subscribe To Our Blog</div>
+            <div class="subscribe__descr-text">
+                A newsletter is a tool used to communicate regularly with
+                your subscribers, delivering the information
+            </div>
+            <form action="">
+                
+            </form>
+        </div>
+    </div>
+    <div class="subscribe__vector">
+        <img src="img/mainvectors/bloobsright.svg" alt="bloobsright">
+    </div>
 </body>
 </html>
